# weather_app

./: bun.lockb  package.json
src/: App.css  App.tsx
src-tauri/: .env  Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
