[package]
name = "weather_app"
version = "0.0.1"
description = "A weather app built with Tauri and React"
authors = ["theHimanshuShekhar"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "window-unmaximize", "window-minimize", "window-maximize", "window-unminimize", "window-start-dragging", "window-close", "window-hide", "window-show", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenv = "0.15.0"
reqwest = "0.12.4"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
